# MediaGeneratingService

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup
deployment/: Dockerfile
image_processor/: api_router.py  auth.py  broker.py  config.py  main.py  models.py  service_provider.py
image_processor/core/: constants.py  timer.py  views.py
image_processor/errors/: error_handlers.py  messages.py
image_processor/google_clients/: google_drive_client.py
image_processor/media/: elevenlabs_client.py  schema.py  service.py  views.py
image_processor/settings/: app.py  base.py  local.py  logging.py  production.py  qa.py  test.py
