[project]
name = "video-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.2",
    "ffmpeg-python>=0.2.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
